0.1648
  add experimental update_at(), delete_at(), select_at()
  add experimental setup_model()
  add experimental DBIx::Custom::Model columns attirbute
  add experimental DBIx::Custom::Model foreign_key() attribute 
  add experimental models() attribute
0.1647
  add default_dbi_option()
0.1646
  add feture. all model class in namespace is included by include_model
  rename experimental include_table to include_model
  rename experimental table to model
  rename experimental DBIx::Custom::Table to DBIx::Custom::Model
  remame experimental DBIx::Custom::Table::name() to DBIx::Custom::Model::table();
0.1645
  removed experimental base_table() for class expandability.
  experimental table() can't set table object any more.
  added experimental include_table().
0.1644
  update pod
0.1643
  add experimental selection option to select()
  add experimental table tag
  fix bug : filter can't overwirite undef value.
  add experimental feature to apply_filter(). you can apply end filter.
  add experimental feature to apply_filter(). TABLE__COLUMN is filterded now.
0.1642
  removed experimental DBIx::Custom::Table base() method
  table created by tabled method can call base_$method correponding to base_table's one
0.1641
  select() where can't receive array reference to prevend SQL injection easily(not backward compatible. sorry. use where() instead)
  added experimental safety_column_name attribute
  fix SQL injection security hole about column name
0.1640
  autoload DBI method
  removed experimental expand
0.1639
  improved delete() and update() where option. you can use DBIx::Custom::Where object
  added experimental not_exists()
0.1638
  table object call dbi object method if not found method.
  added experimental base_table attribute and removed experimental table_class attribute
  renamed helper to method.
  added experimental DBIx::Custom::Result::stash()
  renamed experimental DBIx::Custom::Table helper to method
0.1637